--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>A multiplayer game built using HTML5 canvas and WebSockets</title>
+        <title>RAGEBOTS - A multiplayer game built using HTML5 canvas and WebSockets</title>
         <meta charset="utf-8">
 
         <link rel="stylesheet" href="style/reset.css">
