--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--script src="http://cdn.socket.io/stable/socket.io.js"></script>-->
+<script src="js/socket.io.js"></script>
+<script src="js/requestAnimationFrame.js"></script>
+<script src="js/Keys.js"></script>
+<script src="js/Player.js"></script>
+<script src="js/game.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="style/login.css">
+
     <head>
         <title>RAGEBOTS - A multiplayer game built using HTML5 canvas and WebSockets</title>
         <meta charset="utf-8">
@@ -10,17 +19,43 @@
     </head>
 
     <body>
-        <canvas id="gameCanvas"></canvas>
-        <!--script src="http://cdn.socket.io/stable/socket.io.js"></script>-->
-        <script src="js/socket.io.js"></script>
-        <script src="js/requestAnimationFrame.js"></script>
-        <script src="js/Keys.js"></script>
-        <script src="js/Player.js"></script>
-        <script src="js/game.js"></script>
+		<div id="design">
+        	<canvas id="gameCanvas"></canvas>
+		</div>
+
+		<div id="login">
+
+			<div id="yui-main">
+		  		<div class="yui-b">
+		    		<div class="yui-g">
+
+						<div class="article">
+
+		<h2>Login</h2>
+
+		<form id="loginform" action="javascript:showDraw()">
+			<input type="hidden" name="rt" value="/intra">
+		<table>
+			<tbody><tr><td id = "email" class="c1">E-Mail</td><td><input type="text" name="mail" style="width:200px;" value=""></td></tr>
+				<tr><td class="c1">Password</td><td><input type="password" name="password" style="width:200px;"></td></tr>
+		<!--<tr><td class="c1">Remember me</td><td><input type="checkbox" name="persistent" checked=""></td></tr>-->
+			<tr><td><input type="submit" name="go" value="Login"></td><td><div id="formwarn"></div></td></tr>
+			</tbody>
+		</table>
+		</form>
+
+
+		</div>
+
+		   </div>
+		 </div>
+		</div>
+	 </div>
+
         <script>
             // Initialise the game
-            init();
-            animate();
+			initialize()
+		
         </script>
     </body>
 </html>
