--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 <script src="js/Player.js"></script>
 <script src="js/game.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
+<link href='http://fonts.googleapis.com/css?family=Terminal+Dosis' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="style/login.css">
-
     <head>
         <title>RAGEBOTS - A multiplayer game built using HTML5 canvas and WebSockets</title>
         <meta charset="utf-8">
@@ -19,43 +19,48 @@
     </head>
 
     <body>
-		<div id="design">
-        	<canvas id="gameCanvas"></canvas>
-		</div>
+        <div class="page">
+            <!-- GAME AREA -->
+            <div id="design">
+                <canvas id="gameCanvas"></canvas>
+            </div>
+            <!-- END OF GAME AREA -->
 
-		<div id="login">
+            <!-- AUTHENTICATION AREA -->
+            <div id="login">
+                <form id="loginform" action="javascript:showDraw()">
+                    <fieldset>
 
-			<div id="yui-main">
-		  		<div class="yui-b">
-		    		<div class="yui-g">
+                    <div class="header">
+                        <img class="logo" src="img/forever_alone.png" />
+                        <h1>Ragebots</h1>
+                    </div>
 
-						<div class="article">
+                    <div class="auth-details">
+                       <label for="username" accesskey="e">Email</label>
+                        <div class="editor-field">
+                            <input type="text" name="mail" style="width:300px;" value="">
+                        </div>
 
-		<h2>Login</h2>
-
-		<form id="loginform" action="javascript:showDraw()">
-			<input type="hidden" name="rt" value="/intra">
-		<table>
-			<tbody><tr><td id = "email" class="c1">E-Mail</td><td><input type="text" name="mail" style="width:200px;" value=""></td></tr>
-				<tr><td class="c1">Password</td><td><input type="password" name="password" style="width:200px;"></td></tr>
-		<!--<tr><td class="c1">Remember me</td><td><input type="checkbox" name="persistent" checked=""></td></tr>-->
-			<tr><td><input type="submit" name="go" value="Login"></td><td><div id="formwarn"></div></td></tr>
-			</tbody>
-		</table>
-		</form>
-
-
-		</div>
-
-		   </div>
-		 </div>
-		</div>
-	 </div>
+                        <label for="password" accesskey="p">Password</label>
+                        <div class="editor-field">
+                            <input type="password" name="password" style="width:300px;">
+                        </div>
+                    </div>
+                        <div class="footer">
+                            <p class="loginbutton">
+                                <input class="btn primary" type="submit" name="go" value="Login" />
+                            </p>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+            <!-- END OF AUTHENTICATION AREA -->
+        </div>
 
         <script>
             // Initialise the game
-			initialize()
-		
+            initialize()
         </script>
     </body>
 </html>
