Novo estilo, aumento da Width

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 				            </div>
 				            <div class="menu">
 				                <div id="users">
+									<div id="user"><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">baud</div></div>
 				                    <ul>
 				                        <li><div class="score">1</div><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">baud</div></li>
 				                        <li><div class="score">2</div><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">jaraujo</div></li>
