Actualizar lista de utilizadores

--- a/public/index.html
+++ b/public/index.html
@@ -37,14 +37,9 @@
 				            </div>
 				            <div class="menu">
 				                <div id="users">
-									<div id="user"><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">baud</div></div>
-				                    <ul>
-				                        <li><div class="score">1</div><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">baud</div></li>
-				                        <li><div class="score">2</div><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">jaraujo</div></li>
-				                        <li><div class="score">3</div><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">farinos</div></li>
-				                        <li><div class="score">4</div><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">bananas</div></li>
-				                        <li><div class="score">5</div><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">laranjas</div></li>
-				                        <li><div class="score">6</div><img src="https://codebits.eu/bots/82d66a627631e1bf47e439419e36b283"></img><div class="name">quidgest</div></li>
+									<div id="user"></div>
+				                    <ul id="usersplaying">
+				                       
 				                    </ul>
 				                </div>
 				                <div id="info">
